# CrawlerAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  alembic.ini  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run.config.toml  runserver.py
docker/crawlerAPI/: .dockerignore  Dockerfile
docker/dock/: Dockerfile
docs/: index.md
docs/application/: index.md  middleware.md  router.md
docs/crawler/: index.md
docs/game/: index.md
docs/leaderboards/: index.md
docs/management/: index.md
docs/utilities/: index.md
src/: constants.py  dependencies.py  interfaces.py  lib.py  main.py  management.py  models.py  processor.py  storage.py  utils.py
src/Course/: models.py  router.py  tasks.py
src/Crawler/: interfaces.py  lib.py  models.py  processor.py  router.py
src/Graph/: dependencies.py  management.py  models.py  router.py
src/Leaderboard/: models.py  router.py
src/Stores/: errors.py  interfaces.py
src/Stores/Repositories/: CacheRepository.py  LeaderboardRepository.py
src/Stores/Schema/: tables.py  triggers.py
src/Stores/Schema/alembic/: env.py
src/Stores/Schema/alembic/versions/: db81666a733a_tracker_data_convertion.py  f0a23b50ffbf_leaderboard_tables_setup.py
src/alembic/: env.py
src/alembic/versions/: db81666a733a_tracker_data_convertion.py
src/hooks/: sql_eval.py
src/routers/: game.py
src/schema/: admin.py  triggers.py
src/tasks/: game.py
